--- a/example/views/layout.ejs
+++ b/example/views/layout.ejs
@@ -6,5 +6,6 @@
     <body>
         <%- body %>
             <script src="./index.min.js" charset="utf-8"></script>
+            <script src="./01/01.js"></script>
         </body>
     </html>
